--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
-<!doctype html><html lang="en"><head><title>SimonAKing/About</title><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=2,viewport-fit=cover"/><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/><meta name="renderer" content="webkit"/><meta name="author" content="SimonAKing"/><meta name="theme-color" content="#747171"/><meta name="apple-mobile-web-app-status-bar-style" content="#747171"/><meta name="msapplication-navbutton-color" content="#747171"/><meta http-equiv="x-dns-prefetch-control" content="on"/><link rel="dns-prefetch" href="https://cdn.jsdelivr.net"/><link rel="prefetch" href="https://cdn.jsdelivr.net/"/><link rel="dns-prefetch" href="https://disqus.com"/><link rel="dns-prefetch" href="https://api.github.com/"/><link rel="dns-prefetch" href="https://www.googletagmanager.com"/><link rel="icon" href="https://cdn.jsdelivr.net/gh/SimonAKing/images/blog/favicon.ico" type="image/x-icon"/><link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/SimonAKing/images/blog/favicon.ico" type="image/x-icon"/><link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/SimonAKing/images/PWA/apple-touch-icon.png"/><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/firacode@5.2.0/distr/fira_code.min.css"/><link rel="alternate" type="application/atom+xml" title="SimonAKing" href="https://simonaking.com/blog/atom.xml"/><link href="https://simonaking.com/about/" rel="canonical"/><link rel="manifest" href="https://simonaking.com/manifest.json"/><meta name="mobile-web-app-capable" content="yes"/><meta name="mobile-web-app-title" content="SimonAKing"/><meta name="msapplication-starturl" content="https://simonaking.com"/><meta name="application-name" content="SimonAKing"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-title" content="SimonAKing"/><meta property="og:title" content="SimonAKing"/><meta property="og:site_name" content="SimonAKing"/><meta property="og:type" content="website"/><meta property="og:url" content="https://simonaking.com/about/"/><meta property="og:locale" content="en"/><meta name="description" content="STDIN | Think >> /dev/Mind - SimonAKing"/><meta name="keywords" content="SimonAKing,About,关于"/><meta name="twitter:card" content="summary"/><meta name="twitter:site" content="https://simonaking.com/about/"/><meta name="twitter:creator" content="SimonAKing"/><script type="application/ld+json">{
+<!doctype html><html lang="en"><head><title>克喵爱吃卤面/About</title><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=2,viewport-fit=cover"/><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/><meta name="renderer" content="webkit"/><meta name="author" content="克喵爱吃卤面"/><meta name="theme-color" content="#747171"/><meta name="apple-mobile-web-app-status-bar-style" content="#747171"/><meta name="msapplication-navbutton-color" content="#747171"/><meta http-equiv="x-dns-prefetch-control" content="on"/><link rel="dns-prefetch" href="https://cdn.jsdelivr.net"/><link rel="prefetch" href="https://cdn.jsdelivr.net/"/><link rel="dns-prefetch" href="https://disqus.com"/><link rel="dns-prefetch" href="https://api.github.com/"/><link rel="dns-prefetch" href="https://www.googletagmanager.com"/><link rel="icon" href="https://photo-kemiao.oss-cn-hangzhou.aliyuncs.com/img/favicon.ico-ys" type="image/x-icon"/><link rel="shortcut icon" href="https://photo-kemiao.oss-cn-hangzhou.aliyuncs.com/img/favicon.ico-ys" type="image/x-icon"/><link rel="apple-touch-icon" href="https://photo-kemiao.oss-cn-hangzhou.aliyuncs.com/img/apple-touch-icon.png-ys"/><link rel="stylesheet" href="https://source.314926.xyz/assets/fira_code.min.css"/><link rel="alternate" type="application/atom+xml" title="克喵爱吃卤面" href="https://boke.kemeow.top/rss.xml"/><link href="https://boke.kemeow.top/about/" rel="canonical"/><meta name="mobile-web-app-capable" content="yes"/><meta name="mobile-web-app-title" content="克喵爱吃卤面"/><meta name="msapplication-starturl" content="https://boke.kemeow.top"/><meta name="application-name" content="克喵爱吃卤面"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-title" content="克喵爱吃卤面"/><meta property="og:title" content="克喵爱吃卤面"/><meta property="og:site_name" content="克喵爱吃卤面"/><meta property="og:type" content="website"/><meta property="og:url" content="https://boke.kemeow.top/about/"/><meta property="og:locale" content="en"/><meta name="description" content="STDIN | Think >> /dev/Mind - 克喵爱吃卤面"/><meta name="keywords" content="克喵爱吃卤面,About,关于"/><meta name="twitter:card" content="summary"/><meta name="twitter:site" content="https://boke.boke.kemeow.top/about/"/><meta name="twitter:creator" content="克喵爱吃卤面"/><script type="application/ld+json">{
         "@context": "http://schema.org",
         "@type": "Blog",
         "author": {
           "@type": "Person",
-          "name": "SimonAKing",
+          "name": "克喵爱吃卤面",
           "image": {
             "@type": "ImageObject",
-            "url": "https://cdn.jsdelivr.net/gh/SimonAKing/images/blog/avatar.jpg"
+            "url": "https://cn.cravatar.com/avatar/1F6C8947D35A8186A1647009BA8BC5F2?size=256"
           },
           "description": "STDIN | Think >> /dev/Mind"
         },
         "publisher": {
           "@type": "Organization",
-          "name": "SimonAKing",
+          "name": "克喵爱吃卤面",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://simonaking.com/images/PWA/192.png"
+            "url": "https://cn.cravatar.com/avatar/1F6C8947D35A8186A1647009BA8BC5F2?size=256"
           }
         },
-        "url": "https://simonaking.com/about/",
-        "logo": "https://simonaking.com/images/PWA/192.png",
+        "url": "https://boke.kemeow.top/about/",
+        "logo": "https://cn.cravatar.com/avatar/1F6C8947D35A8186A1647009BA8BC5F2?size=256",
         "image": {
           "@type": "ImageObject",
-          "url": "https://simonaking.com/images/PWA/192.png"
+          "url": "https://cn.cravatar.com/avatar/1F6C8947D35A8186A1647009BA8BC5F2?size=256"
         },
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "https://simonaking.com/about/"
+          "@id": "https://boke.kemeow.top/about/"
         },
-        "keywords": "SimonAKing,About,关于",
-        "description": "STDIN | Think >> /dev/Mind - SimonAKing"
+        "keywords": "克喵爱吃卤面,About,关于",
+        "description": "STDIN | Think >> /dev/Mind - 克喵爱吃卤面"
       }</script><!--[if lt IE 9]>
       <style>
         .alert {
